--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 <!--End mainmenu area-->     
 
 <!--Start breadcrumb area-->     
-<section class="breadcrumb-area" style="background-image: url(img/breadcrumb/breadcrumb-bg.jpg);">
+<section class="breadcrumb-area" style="background-image: url(img/breadcrumb/about-breadcrumb-bg.png);">
 	<div class="container text-center">
 		<h1>About Us</h1>
 	</div>
