--- a/anodising.html
+++ b/anodising.html
@@ -146,9 +146,11 @@
                                         <h2>Anodising</h2>
                                         <span class="border"></span>
                                     </div>
-                                    <p>Must explain to you how all this mistaken idea of denouncing works pleasure and praising uts pain was born and I will gives you a itself completed account of the system, and sed expounds the ut actual teachings of that greater sed explores truth, the master-builders of human happiness one rejects, dislikes avoided pleasure.</p>
-                                    <p>Denouncing works pleasures and praising pains was us born and I will gives you a completed ut workers accounts of the system, and expounds that actual teachings greater explores.</p>
-                                    <h3>We Can offer Following Three Types of Chemical Research & Development Solutions:</h3>    
+                                    <p>Anodizing is an electrolytic process used for increasing the thickness of metal, converting it into decorative and corrosion-resistant piece. Several metals like Magnesium and Titanium can be anodized, Ideally Aluminium is best suited for Anodizing.</p>
+
+                                    <p>The aluminium is anodised by the passing of an electrical current from the anode to the cathode. The item to be anodised becomes the anode part of the electrical circuit whilst the cathodes are already in the anodising tank. The electrical current causes oxygen to be released at the anode which combines with the aluminium to form the aluminium oxide which is the anodic film. The depth of the anodic film is determined by the time in the anodising tank, usually between 15 to 60 minutes which will create an anodic film thickness of between 5 and 25 microns.</p>
+
+                                    <h3>We Can offer Following Three Types of Anodising:</h3>    
                                 </div>    
                             </div>
                         </div>
