--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
-                        <img src="img/services/1.jpg" alt="Awesome Image">
+                        <img src="img/solution/anodising.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -273,7 +273,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
-                        <img src="img/services/2.jpg" alt="Awesome Image">
+                        <img src="img/solution/powder.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -355,7 +355,7 @@
                     <ul>
                         <li class="single-fact-counter">
                             <div class="icon-holder"><span class="flaticon-avatar"></span></div>
-                            <span class="timer" data-from="1" data-to="2456" data-speed="5000" data-refresh-interval="50">2456</span>
+                            <span class="timer" data-from="1" data-to="100" data-speed="5000" data-refresh-interval="30">100</span>
                             <i class="fa fa-plus" aria-hidden="true"></i>
                             <h3>Engineers & Workers</h3>    
                         </li>
@@ -367,7 +367,7 @@
                         </li>
                         <li class="single-fact-counter">
                             <div class="icon-holder"><span class="flaticon-technology"></span></div>
-                            <span class="timer" data-from="1" data-to="3250" data-speed="5000" data-refresh-interval="50">3250</span>
+                            <span class="timer" data-from="1" data-to="50" data-speed="5000" data-refresh-interval="50">50</span>
                             <i class="fa fa-plus" aria-hidden="true"></i>
                             <h3>Projects Completed</h3>
                         </li>    
@@ -644,73 +644,31 @@
                         <li>
                             <div class="img-holder">
                                 <img src="img/footer/instagram-1.jpg" alt="Awesome Image">
-                                <div class="overlay-box">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
                                 <img src="img/footer/instagram-2.jpg" alt="Awesome Image">
-                                <div class="overlay-box">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
                                 <img src="img/footer/instagram-3.jpg" alt="Awesome Image">
-                                <div class="overlay-box">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
                                 <img src="img/footer/instagram-4.jpg" alt="Awesome Image">
-                                <div class="overlay-box">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
                                 <img src="img/footer/instagram-5.jpg" alt="Awesome Image">
-                                <div class="overlay-box">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </li>
                         <li>
                             <div class="img-holder">
                                 <img src="img/footer/instagram-6.jpg" alt="Awesome Image">
-                                <div class="overlay-box">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </li>
                     </ul>
