--- a/powder-coating.html
+++ b/powder-coating.html
@@ -145,9 +145,12 @@
                                         <h2>Powder Coating</h2>
                                         <span class="border"></span>
                                     </div>
-                                    <p>Must explain to you how all this mistaken idea of denouncing works pleasure and praising uts pain was born and I will gives you a itself completed account of the system, and sed expounds the ut actual teachings of that greater sed explores truth, the master-builders of human happiness one rejects, dislikes avoided pleasure.</p>
-                                    <p>Denouncing works pleasures and praising pains was us born and I will gives you a completed ut workers accounts of the system, and expounds that actual teachings greater explores.</p>
-                                    <h3>We Can offer Following Three Types of Chemical Research & Development Solutions:</h3>    
+                                    <p>MPowder coating is the application of a dry paint in the form of a powder onto a surface using the principle of electrostatic charging. Powder may be a thermoplastic or a thermoset polymer. It is usually used to create a hard finish that is tougher than conventional paint. After the application process the paint is cured under heat to allow it to flow and form a “skin”.</p>
+
+                                    <p>In the application process, the polymer paint powder is applied from an air-powered gun. As the powder leaves the gun, it is given a positive electric charge while the part is grounded, giving it a negative charge. The powder flows and “sticks” to the grounded surface due to the attraction of the dissimilar charges. Where regular paint will over spray, causing waste and mess, powder wants to attach itself to the grounded part as much as it can. This causes a significant reduction in wastage.</p>
+
+
+                                    <h3>We Can offer Following Three Types of Powder Coating:</h3>    
                                 </div>    
                             </div>
                         </div>
