--- a/solutions.html
+++ b/solutions.html
@@ -101,7 +101,7 @@
 <!--End mainmenu area-->     
 
 <!--Start breadcrumb area-->     
-<section class="breadcrumb-area" style="background-image: url(img/breadcrumb/breadcrumb-bg.jpg);">
+<section class="breadcrumb-area" style="background-image: url(img/breadcrumb/solution-breadcrumb-bg.png);">
 	<div class="container text-center">
 		<h1>Solutions</h1>
 	</div>
@@ -133,7 +133,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
-                        <img src="img/services/1.jpg" alt="Awesome Image">
+                        <img src="img/solution/anodising.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
@@ -158,7 +158,7 @@
             <div class="col-md-46 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
-                        <img src="img/services/2.jpg" alt="Awesome Image">
+                        <img src="img/solution/powder.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
