--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                                 <span class="flaticon-avatar"></span>    
                             </div>
                             <div class="text-holder">
-                                <h3>We are Professional</h3>
+                                <h3>We are Professionals</h3>
                                 <p>Our technicians, process and quality control keep a close eye on our customer’s product to ensure a high quality finish.</p>    
                             </div>
                         </li>
@@ -163,7 +163,7 @@
                                 <span class="flaticon-tool-1"></span>    
                             </div>
                             <div class="text-holder">
-                                <h3>We are Expert</h3>
+                                <h3>We are Experts</h3>
                                 <p>Crystal Industries pledges to provide practical solutions to today's complex anodizing and powder coating dilemmas in the most profitable designs available.</p>    
                             </div>
                         </li>   
