--- a/anodising.html
+++ b/anodising.html
@@ -127,7 +127,7 @@
 
                                     <p>Anodizing is a multi step process whereby aluminum is electrochemically processed to form a layer of aluminum oxide (anodic) coating which protects the aluminum beneath. The coating can also be cosmetically enhanced by dying it as a step in the anodizing process. Surface cleanliness and preparation is the key to good anodizing results.</p>
 
-                                    <!-- <p>The anodic oxide structure originates from the aluminum substrate and is composed entirely of aluminum oxide. This aluminum oxide is not applied to the surface like paint or plating, but is fully integrated with the underlying aluminum substrate, so cannot chip or peel. It has a highly ordered, porous structure that allows for secondary processes such as coloring and sealing.</p> -->
+                               
 
                                     <p>Anodizing is accomplished by immersing the aluminum into an acid electrolyte bath and passing an electric current through the medium. A cathode is mounted to the inside of the anodizing tank; the aluminum acts as an anode, so that oxygen ions are released from the electrolyte to combine with the aluminum atoms at the surface of the part being anodized. Anodizing is, therefore, a matter of highly controlled oxidation—the enhancement of a naturally occurring phenomenon.</p>
 
@@ -141,14 +141,14 @@
                         <div class="bottom">
                             <div class="col-md-5">
                                 <div class="img-holder">
-                                    <img src="img/solution-single/solution-v1-2.jpg" alt="Awesome Image">
+                                    <img src="img/solution-single/solution-v2-2.jpg" alt="Awesome Image">
                                 </div>
                             </div>
                             <div class="col-md-7">
                                 <div class="text-holder">
 
                                     <div class="sec-title-two">
-                                        <h2>Advantages of Anodizing over Powder-Coating/Painting/PVDF : </h2>
+                                        <h2>Advantages: </h2>
                                         <span class="border"></span>
                                     </div>
 
