--- a/sliding-doors-windows.html
+++ b/sliding-doors-windows.html
@@ -111,7 +111,7 @@
                         <div class="top">
                             <div class="col-md-5">
                                 <div class="img-holder">
-                                    <img src="img/solution-single/solution-v1-1.jpg" alt="Awesome Image">    
+                                    <img src="img/solution-single/solution-v3-1.jpg" alt="Awesome Image">    
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -123,7 +123,7 @@
 
                                     <p>Extend your home’s ambience into the great outdoors with sliding doors. Our selection of sliding doors visually expand and brighten any room and the glass area means added light, so every season is more enjoyable. Our sliding doors allow you to spend more time enjoying the view and less time on maintenance. These doors never need painting and cleaning is simple; your favorite household cleaners and a damp cloth will make glass and vinyl surfaces sparkle like new.</p>
 
-                                    <p>As for ease of operation and durability, you’ll find no better sliding door options. Our heavy-duty fiberglass screening is tough; aluminum frames ensures the outer screen door stands up to the test of time, while an adjustable four-point tension system keeps screens on track. Special anodized tracks at the sill resist corrosion to help keep door panels gliding smoothly for years to come.</p>
+                                    <p>As for ease of operation and durability, you’ll find no better sliding door options. Our heavy-duty fiberglass screening is tough; aluminum frames ensures the outer screen door stands up to the test of time. Special anodized tracks at the sill resist corrosion to help keep door panels gliding smoothly for years to come.</p>
 
                                    
 
@@ -135,15 +135,13 @@
                         <div class="bottom">
                             <div class="col-md-5">
                                 <div class="img-holder">
-                                    <img src="img/solution-single/solution-v1-2.jpg" alt="Awesome Image">
+                                    <img src="img/solution-single/solution-v3-2.jpg" alt="Awesome Image">
                                 </div>
                             </div>
                             <div class="col-md-7">  
 
                              <div class="text-holder">
-                                    <div class="sec-title-two">
-                                        <span class="border"></span>
-                                    </div>
+
 
                                     <p>Horizontal Slider windows open with the sash sliding left or right. Some people find sliding windows easier and faster to open than crank-style windows. Since they open and close without protruding, horizontal sliders are an excellent choice for rooms facing walkways, porches or patios. Horizontal sliders are a favorite for contemporary style homes and are also popular for satisfying bedroom egress requirements. In a single slider, one sash slides to open. In a double slider, both sashes open. Double sliders are great for providing air circulation, particularly if there is only one window in the room.</p>
 
