--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
             <div class="col-md-8 col-sm-12 col-xs-12">
                 <div class="send-message-form">
                     <div class="title">
-                        <h2>Send Messge Us</h2>
+                        <h2>Send us a Message</h2>
                         <span class="border"></span>
                     </div>
                     <h3>I would like to discuss:</h3>
