--- a/about.html
+++ b/about.html
@@ -120,7 +120,10 @@
                     <p>Networking with the top technical individuals, we provide our customers with the most accurate and valuable information sources available.</p>
                     <p>We will sift through these advances to bring practical, usable and cost effective designs to your operation. Our company provides the best metal finishing operations.</p>
 
-                    
+                    <p>At Crystal Industries, we thrive on our service and quality.</p>
+
+                                    <p>We offer the finest finishing at Crystal Industries. We understand the quality and demand in the Industry, which we have a vast amount of experience, knowledge and most importantly expertise within the industry.</p>
+                                    
                 </div>
             </div>
         </div>
