--- a/anodising.html
+++ b/anodising.html
@@ -143,7 +143,13 @@
                                 <div class="img-holder">
                                     <img src="img/solution-single/solution-v2-2.jpg" alt="Awesome Image">
                                 </div>
+                                <br/>
+                                <div class="img-holder">
+                                    <img src="img/solution-single/solution-v2-3.jpg" alt="Awesome Image">
+                                </div>
                             </div>
+
+                            <br/>
                             <div class="col-md-7">
                                 <div class="text-holder">
 
