--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     data-start="500">
                     <div class="slide-content-box">
                         <h3>Crystal Industries</h3>
-                        <h1>Provide Solution for<br> All Industries</h1>
-                        <p>Crystal Industries has consistently embraced innovation to<br> provide a superior level of excellence.</p>
+                        <h1>Providing World Class metal finishes</h1>
+                        <p>Metal Coating Servicies which will stand the test of time.</p>
                         
                     </div>
                 </div>
@@ -111,8 +111,8 @@
                     data-start="700">
                     <div class="slide-content-box">
                         <h3>Crystal Industries</h3>
-                        <h1>Leading Manufacturer<br>Company</h1>
-                        <p>Crystal Industries has consistently embraced innovation to<br> provide a superior level of excellence.</p>
+                        <h1>15 Years of Unparalleled Service</h1>
+                        <p>Providing practical solutions in all cases with the most ideal resources available.</p>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -169,7 +169,7 @@
                     data-responsive_offset="on"
                     data-start="1500">
                     <div class="slide-content-box">
-                        <h1>Providing World Class Quality</h1>
+                        <h1>Leading the way in Anodidsing and Powder Coating</h1>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -384,7 +384,7 @@
                        
                     </div>
                     <div class="text-holder">
-                        <h5>Managing Directo</h5>
+                        <h5>Managing Director</h5>
                         <h3>Jayant Kamat</h3>
                         <ul>
                             <li><span>Tel:</span>9822100909</li>
