--- a/solutions.html
+++ b/solutions.html
@@ -118,7 +118,7 @@
                         </div>
                         <div class="text">
                             <h3>Anodising</h3>
-                            <p>Anodised aluminium is now fashionable as a design statement.</p>
+                            <p>Providing Smooth surface finish in various colours by an electrolytic process.</p>
                         </div>
                     </div>    
                 </div>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="text">
                             <h3>Powder Coating</h3>
-                            <p>Powder coating is a type of coating that is applied as a free-flowing, dry powder.</p>
+                            <p>Providing surface finishes by application of dry powder followed by curing under heat.</p>
                         </div>
                     </div>    
                 </div>
@@ -170,7 +170,7 @@
                         </div>
                         <div class="text">
                             <h3>Sliding Doors & Windows</h3>
-                            <p>Extend your home’s ambience into the great outdoors with sliding doors.</p>
+                            <p>Providing custom-sized sliding panels to enhace the look of the doors and windows.</p>
                         </div>
                     </div>    
                 </div>
