--- a/anodising.html
+++ b/anodising.html
@@ -163,16 +163,16 @@
                                 <div class="accordion-box">
                                     <!--Start single accordion box-->
                                     <div class="accordion accordion-block">
-                                        <div class="accord-btn"><h4>Cost Effective</h4></div>
-                                        <div class="accord-content">
+                                        <div class="accord-btn active"><h4>Cost Effective</h4></div>
+                                        <div class="accord-content collapsed">
                                             <p>In general, anodizing is less expensive than painting.</p>
                                         </div>
                                     </div>
                                     <!--End single accordion box--> 
                                     <!--Start single accordion box-->
                                     <div class="accordion accordion-block">
-                                        <div class="accord-btn active"><h4>Harder than PVDF</h4></div>
-                                        <div class="accord-content collapsed">
+                                        <div class="accord-btn "><h4>Harder than PVDF</h4></div>
+                                        <div class="accord-content">
                                             <p>Anodizing is better for aluminum in high traffic areas where the coating is subject to physical abuse and abrasive cleaners.</p>
                                         </div>
                                     </div>
