--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
                                         <span class="flaticon-signs"></span>
                                     </div>
                                     <div class="text-box">
-                                        <p><span>Address:</span> NEED</p>
+                                        <p><span>Address:</span>101, Rayu Chambers, Dr. AB Road, Panjim, Goa - India</p>
                                     </div>
                                 </li>
                                 <li>
@@ -194,7 +194,7 @@
                                         <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
                                     </div>
                                     <div class="text-box">
-                                        <p><span>Call Us:</span>+91 NEED</p>
+                                        <p><span>Call Us:</span>+91 08322223053</p>
                                     </div>
                                 </li>
                                 <li>
@@ -202,7 +202,7 @@
                                         <span class="flaticon-clock-1"></span>
                                     </div>
                                     <div class="text-box">
-                                        <p><span>Mon - Sat:</span>NEED-1PM <br/>2:NEED-NEED<br> 
+                                        <p><span>Mon - Sat:</span>9AM-5PM<br> 
                                         <span>Sunday:</span>Closed</p>
                                     </div>
                                 </li>
