--- a/index.html
+++ b/index.html
@@ -228,11 +228,13 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-science"></span>    
+                            <span>
+                                <img src="img/resources/hot-tub.png"></img>
+                            </span>    
                         </div>
                         <div class="text">
                             <h3>Anodising</h3>
-                            <p>Chemical Research expertise in for you manipulating chemicals energy.</p>
+                            <p>Providing Smooth surface finish in various colours by an electrolytic process.</p>
                         </div>
                     </div>    
                 </div>
@@ -253,11 +255,13 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-science"></span>    
+                            <span>
+                                <img src="img/resources/powder.png"></img>
+                            </span>    
                         </div>
                         <div class="text">
                             <h3>Powder Coating</h3>
-                            <p>Agricultural engineering at profession who developdesign procedure.</p>
+                            <p>Providing surface finishes by application of dry powder followed by curing under heat.</p>
                         </div>
                     </div>    
                 </div>
@@ -279,11 +283,13 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-science"></span>    
+                            <span>
+                                <img src="img/resources/window.png"></img>
+                            </span>    
                         </div>
                         <div class="text">
                             <h3>Sliding Doors & Windows</h3>
-                            <p>Agricultural engineering at profession who developdesign procedure.</p>
+                            <p>Providing custom-sized sliding panels to enhace the look of the doors and windows.</p>
                         </div>
                     </div>    
                 </div>
@@ -320,7 +326,7 @@
                         </div>
                         <div class="content">
                             <h2>Processing</h2>
-                            <p>Processing & Develop</p>
+                            <p>Processing & Development</p>
                         </div>
                     </a>
                 </li>
@@ -357,7 +363,7 @@
 
                     <p>Our mission is to provide quality metal coating services to protect your property from the test of time.</p>
 
-                    <p>Crystal Industries pledges to provide practical solutions to today's complex anodizing and powder coating dilemmas in the most profitable designs available.</p>
+                
                 </div>
               
             </div>
