--- a/locations.html
+++ b/locations.html
@@ -277,11 +277,11 @@
                                 </h2>
                             </a>
                             <ul class="meta-info">
-                                <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">Mon-Sat 9AM-1PM 2:30PM-6:30PM Sun Closed</a></li>
+                                <li><i class="fa fa-clock-o" aria-hidden="true"></i><a href="#">Mon-Sat 9AM-5PM Sun Closed</a></li>
                                 <li><i class="fa fa-tags" aria-hidden="true"></i><a href="#">Office</a></li>
                             </ul>
                             <div class="text">
-                                <p>ADD ADDRESS HERE!!!!!</p>
+                                <p>101, Rayu Chambers, Dr. AB Road, Panjim, Goa - India</p>
                             </div>
                             
                             <div class="row">
@@ -293,7 +293,7 @@
                                     </div>
                                     <div class="text-box">
                                         <h3>Contact</h3>
-                                        <span>+91 000000000000000000</span>
+                                        <span>+91 08322223053</span>
                                     </div>    
                                 </div>
 
@@ -308,7 +308,7 @@
                                     </div>
                                     <div class="text-box">
                                         <h3>Directions</h3>
-                                       <a href="https://www.google.co.in/maps/dir/''/Shop+No.+B-3%2F4,+Crystal+Metals+India+Pvt.+Ltd.,+Saldanha+Business+Tower,+Duler-Marna-Siolim+Rd,+Opp.+St.+Mary+School,+Mapusa,+Goa+403507/data=!4m5!4m4!1m0!1m2!1m1!1s0x3bbfeae1e8b5d1a3:0x190029c176ca904c?sa=X&ved=0ahUKEwib1PahjbTVAhUGO48KHdOUC6IQiBMIQjAB">ADD HERE!.</a>
+                                       <a href="https://www.google.co.in/maps/dir//15.495768,73.823695/@15.495768,73.821501,17z/data=!4m8!1m7!3m6!1s0x0:0x0!2zMTXCsDI5JzQ0LjgiTiA3M8KwNDknMjUuMyJF!3b1!8m2!3d15.495768!4d73.823695">Click here.</a>
                                     </div>    
                                 </div>
 
