--- a/solutions.html
+++ b/solutions.html
@@ -114,8 +114,10 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-science"></span>    
-                        </div>
+                            <span>
+                                <img src="img/resources/hot-tub.png"></img>
+                            </span>                          
+                            </div>
                         <div class="text">
                             <h3>Anodising</h3>
                             <p>Providing Smooth surface finish in various colours by an electrolytic process.</p>
@@ -139,7 +141,9 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-science"></span>    
+                             <span>
+                                <img src="img/resources/powder.png"></img>
+                            </span>    
                         </div>
                         <div class="text">
                             <h3>Powder Coating</h3>
@@ -166,7 +170,9 @@
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-science"></span>    
+                             <span>
+                                <img src="img/resources/window.png"></img>
+                            </span> 
                         </div>
                         <div class="text">
                             <h3>Sliding Doors & Windows</h3>
