--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         </div>
                         <div class="text-holder">
                             <h5>Crystal Industries</h5>
-                            <a href="">Follow Us</a>    
+                            <a href="https://www.facebook.com/Crystal-Metals-613709992170125/">Follow Us</a>    
                         </div>
                     </div>
                 </div>
