--- a/about.html
+++ b/about.html
@@ -110,8 +110,8 @@
             <div class="col-md-6">
                 <div class="content">
                     <div class="sec-title">
-                        <p>Welcome to Crystal Industries</p>
-                        <h1>About Us</h1>    
+                        <p>&nbsp;</p>
+                        <h1>Welcome to Crystal Industries</h1>    
                     </div>
                     <h3>We provide our customers with the most accurate and valuable information sources available.
                     <span>- Crystal Industries.</span></h3>
