--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     data-start="700">
                     <div class="slide-content-box">
                         <h3>Crystal Industries</h3>
-                        <h1>15 Years of Unparalleled Service</h1>
+                        <h1>Celebrating 15 Years of Unparalleled Service</h1>
                         <p>Providing practical solutions in all cases with the most ideal resources available.</p>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     data-responsive_offset="on"
                     data-start="1500">
                     <div class="slide-content-box">
-                        <h1>Leading the way in Anodidsing and Powder Coating</h1>
+                        <h1>Leading the way in Anodising and Powder Coating</h1>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
