Add EmailJs and Sendgrid support

--- a/about.html
+++ b/about.html
@@ -110,13 +110,13 @@
             <div class="col-md-6">
                 <div class="content">
                     <div class="sec-title">
-                        <p>&nbsp;</p>
-                        <h1>Welcome to Crystal Industries</h1>    
+                        
+                        <h1>Welcome to Crystal Industries Goa</h1>    
                     </div>
                     <h3>We provide our customers with the most accurate and valuable information sources available.
                     <span>- Crystal Industries.</span></h3>
 
-                    <p>We've been in business since 2002 so we understand your application needs and eliminate process problems before they happen. Our constant attention to detail allows us to offer a wide range of services, with the highest quality standards.</p>
+                    <p>We've been in business in Goa since 2002 so we understand your application needs and eliminate process problems before they happen. Our constant attention to detail allows us to offer a wide range of services, with the highest quality standards.</p>
                     <p>Networking with the top technical individuals, we provide our customers with the most accurate and valuable information sources available.</p>
                     <p>We will sift through these advances to bring practical, usable and cost effective designs to your operation. Our company provides the best metal finishing operations.</p>
 
