--- a/contact.html
+++ b/contact.html
@@ -524,6 +524,12 @@
 
 <script src="js/email.js"></script>
 
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_c4gh1h0jS4FyqTmH6jE0E");
+   })();
+</script>
 
 
 
