--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     data-start="700">
                     <div class="slide-content-box">
                         <h3>Crystal Industries</h3>
-                        <h1>Celebrating 15 Years of Unparalleled Service</h1>
+                        <h1>Celebrating 15 Years of Unparalleled Service in Goa</h1>
                         <p>Providing practical solutions in all cases with the most ideal resources available.</p>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     data-responsive_offset="on"
                     data-start="1500">
                     <div class="slide-content-box">
-                        <h1>Leading the way in Anodising and Powder Coating</h1>
+                        <h1>Leading the way in Anodising and Powder Coating in Goa</h1>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -343,7 +343,7 @@
                     <h1>About Us</h1>    
                 </div>
                 <div class="text-box">
-                <p>We've been in business since 2002 so we understand your application needs and eliminate process problems before they happen. Our constant attention to detail allows us to offer a wide range of services, with the highest quality standards.</p>
+                <p>We've been in business in Goa since 2002 so we understand your application needs and eliminate process problems before they happen. Our constant attention to detail allows us to offer a wide range of services, with the highest quality standards.</p>
                 <p>Our technicians, process and quality control keep a close eye on our customer’s product to ensure a high quality finish.</p>
                 </div>
                
@@ -357,7 +357,7 @@
                     <h1>Processing</h1>    
                 </div>
                 <div class="text-box">
-                    <p>Networking with the top technical individuals, we provide our customers with the most accurate and valuable information sources available.</p>
+                    <p>We network with the top technical individuals, we provide our customers with the most accurate and valuable information sources available.</p>
 
                     <p>We will sift through these advances to bring practical, usable and cost effective designs to your operation. Our company provides the best metal finishing operations.</p>
 
@@ -381,7 +381,7 @@
     <div class="container">
         <div class="sec-title">
             <p>Our Team</p>
-            <h1>Meet Our Experts</h1>    
+            <h1>Meet Our Expert Team in Goa</h1>    
         </div> 
         <div class="row">
             <!--Start single team member-->
@@ -470,7 +470,7 @@
                         <p>Get In Touch</p>
                         <h1>Send us a Message </h1>    
                     </div>
-                    <form action="inc/sendemail.php" class="contact-form">
+                     <form class="contact-form" method="POST">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
@@ -500,7 +500,7 @@
                                             <option>Anodising</option>
                                             <option>Sliding Doors & Windows</option>
                                             <option>Other</option>
-				                        </select>    
+                                        </select>    
                                     </div>
                                 </div>
                             </div>
@@ -508,7 +508,7 @@
                                 <textarea name="message" placeholder="Write Your Needs..."></textarea>
                             </div>
                             <div class="col-md-12">
-                                <button class="thm-btn yellow-bg" type="submit">Submit Now</button>
+                                <button onclick="sendMail(); return false" class="thm-btn yellow-bg" type="submit">Submit Now</button>
                             </div>
                         </div> 
                     </form> 
