--- a/locations.html
+++ b/locations.html
@@ -308,7 +308,7 @@
                                     </div>
                                     <div class="text-box">
                                         <h3>Directions</h3>
-                                       <a href="https://www.google.co.in/maps/dir//15.495768,73.823695/@15.495768,73.821501,17z/data=!4m8!1m7!3m6!1s0x0:0x0!2zMTXCsDI5JzQ0LjgiTiA3M8KwNDknMjUuMyJF!3b1!8m2!3d15.495768!4d73.823695">Click here.</a>
+                                       <a href="https://www.google.co.in/maps/dir/''/''/data=!4m5!4m4!1m0!1m2!1m1!1s0x3bbfc08dd26eef91:0x38b482cbedf6cfa4?sa=X&ved=0ahUKEwikjPKPx8rVAhXCpI8KHQDsB5cQ9RcICzAA">Click here.</a>
                                     </div>    
                                 </div>
 
