--- a/contact.html
+++ b/contact.html
@@ -260,7 +260,7 @@
                         <span class="border"></span>
                     </div>
                     <h3>I would like to discuss:</h3>
-                    <form  class="contact-form" method="POST">
+                    <form  name="contact-form" class="contact-form" method="POST">
                         <div class="row">
                             <div class="col-md-6">
                                 <select class="selectmenu">
