--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <p>Get In Touch</p>
                         <h1>Send us a Message </h1>    
                     </div>
-                     <form class="contact-form" method="POST">
+                     <form name="contact-form" class="contact-form" method="POST">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
