--- a/contact.html
+++ b/contact.html
@@ -260,10 +260,10 @@
                         <span class="border"></span>
                     </div>
                     <h3>I would like to discuss:</h3>
-                    <form  name="contact-form" class="contact-form" method="POST">
+                    <form  name="contactusform" class="contact-form" method="GET">
                         <div class="row">
                             <div class="col-md-6">
-                                <select class="selectmenu">
+                                <select name="selectmenu" class="selectmenu">
                                     <option>Powder Coating</option>
                                             <option>Anodising</option>
                                             <option>Sliding Doors & Windows</option>
