--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <p>Get In Touch</p>
                         <h1>Send us a Message </h1>    
                     </div>
-                     <form name="contact-form" class="contact-form" method="POST">
+                    <form  name="contactusform" class="contact-form" method="GET">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
@@ -494,7 +494,7 @@
                                         </div>      
                                     </div>
                                     <div class="col-md-6">
-                                        <select class="selectmenu">
+                                        <select name="selectmenu" class="selectmenu">
                                             <option selected="selected">Choose Solution</option>
                                             <option>Powder Coating</option>
                                             <option>Anodising</option>
@@ -716,7 +716,7 @@
 
 <!-- thm custom script -->
 <script src="js/custom.js"></script>
-
+<script src="js/email.js"></script>
 
 <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script type="text/javascript">
